# advent-of-code

./: .gitignore  README.md  create_puzzle_folder.sh  pyproject.toml  solution_template.py
2022/05/: 05.py  puzzle_input.txt
2022/06/: 06.py
2022/07/: 07.py
2023/02/: 02.py
advent_of_code/: decorators.py  utilities.py
advent_of_code/2022/01/: 01.py
advent_of_code/2022/02/: 02.py
advent_of_code/2022/03/: 03.py
advent_of_code/2022/04/: 04.py
advent_of_code/2022/08/: 08.py
advent_of_code/2022/09/: 09.py
advent_of_code/2022/10/: 10.py
advent_of_code/2022/11/: 11.py
advent_of_code/2022/25/: 25.py
advent_of_code/2023/01/: 1.py
advent_of_code/2023/02/: 02.py
advent_of_code/2023/03/: 03.py
advent_of_code/2023/04/: 04.py
advent_of_code/2023/05/: 05.py
advent_of_code/2023/06/: 06.py
advent_of_code/2023/07/: 07.py
advent_of_code/2023/08/: 08.py
advent_of_code/2023/09/: 09.py
advent_of_code/2023/10/: 10.py
advent_of_code/2023/11/: 11.py
advent_of_code/2023/12/: 12.py
advent_of_code/2023/13/: 13.py
advent_of_code/2023/14/: 14.py
advent_of_code/2023/15/: 15.py
advent_of_code/2023/16/: 16.py
advent_of_code/2023/18/: 18.py
advent_of_code/2023/19/: 19.py
advent_of_code/2023/20/: 20.py
advent_of_code/2023/22/: 22.py
advent_of_code/2024/01/: 01.py
advent_of_code/2024/02/: 02.py
advent_of_code/2024/11/: 11.py
advent_of_code/2025/1/: 1.py
advent_of_code/2025/2/: 2.py
advent_of_code/2025/3/: 3.py
advent_of_code/2025/4/: 4.py
advent_of_code/2025/5/: 5.py
