[project]
name = "advent_of_code"
version = "0.1.0"
description = "Solutions to Advent of Code challenges"
authors = [
    {name = "", email = "abeldewit@gmail.com"},
    {name = "Abel de Wit", email = "abeldewit@gmail.com"},
]
dependencies = [
    "prettytable>=0.7.2",
    "aocd>=0.1",
    "browser-cookie3>=0.20.1",
    "tqdm>=4.23.3",
    "numpy>=2.2.6",
]
requires-python = "==3.10"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
lint = [
    "ruff>=0.14.7",
    "isort>=7.0.0",
]
[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.pdm]
distribution = true

[tool.pdm.build]
includes = ["advent_of_code"]


